SpawnBall Fix & Refactoring

--- a/.gitignore
+++ b/.gitignore
@@ -155,3 +155,5 @@ Assets/Editor/Tools/LineCounter/*
 # Log files can be ignored.
 fmod_editor.log
 Assets/Plugins/FMOD/images
+*/tempburstlibs
+.Other
